--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,19 @@
       "dest": "/api/app.js"
     },
      {
-      "src": "/(.*)",
+      "src": "front/(.*)",
       "dest": "/front/$1"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' https://vercel.live"
+        }
+      ]
     }
   ]
 }
