--- a/package.json
+++ b/package.json
@@ -1,46 +1,51 @@
 {
-  "name": "inventory",
-  "version": "1.0.0",
-  "scripts": {
-    "start:dev": "rimraf ../../api && tsc-watch --onSuccess 'npm run watch:server'",
-    "watch:server": "nodemon 'src/app.ts' --watch './src'",
-    "start": "nodemon src/app.ts",
-    "build": "rimraf ../../api && tsc",
-    "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add ../../api",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon '../../api/app.js' --watch '../../api'"
-  },
+  "name": "vercel",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@types/cors": "^2.8.17",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "mongoose": "^8.1.0",
     "bcrypt": "^5.1.1",
     "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
+    "react-hook-form": "^7.53.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.10.8",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "lint-staged": "^15.2.7",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1",
-    "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
-    "tsc-watch": "^6.0.4",
-    "typescript": "^5.3.3"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "server": "nodemon 'api/app.js' --watch './src'"
   },
-  "lint-staged": {
-    "{src,apps,libs,test}/**/*.ts": "eslint --fix"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
